# claude-knowledger

./: .gitignore  .goreleaser.yaml  Makefile  README.md  README.zh-CN.md  go.mod  go.sum  install.ps1  install.sh  knowledger.example.yaml  knowledger.spec  pyproject.toml
cmd/knowledger/: main.go
docs/superpowers/plans/: 2026-06-06-dashboard-search-lab-mvp.md  2026-06-06-knowledger-implementation-plan.md  2026-06-07-retrieval-snippets.md
docs/superpowers/specs/: 2026-06-06-dashboard-search-lab-design.md  (+3 more)
internal/app/: app.go  app_test.go
internal/config/: config.go  config_test.go
internal/core/: backend.go  errors.go  querytokens.go  querytokens_test.go  scope.go  scope_test.go  types.go
internal/indexing/: queue.go  worker.go  worker_test.go
internal/projectroot/: projectroot.go  projectroot_test.go
internal/registry/: filestore.go  registry.go  registry_test.go  store.go
internal/service/: export_test.go  service.go  service_test.go
knowledger/: main.py
knowledger/app/: app.py
knowledger/config/: config.py
knowledger/core/: __init__.py  backend.py  errors.py  scope.py  types.py  utils.py
knowledger/indexing/: __init__.py
knowledger/install/: claude.py
knowledger/registry/: __init__.py  filestore.py  registry.py  store.py
knowledger/service/: __init__.py  service.py
plugins/claude-code-knowledger/: README.md  embed.go
plugins/knowledger/: .mcp.json  README.md  embed.go
web/: assets.go
web/static/: app.js  styles.css
web/templates/: dashboard.html  debug.html  kbs.html  knowledge.html  layout.html  search_lab.html
(+80 files in other folders)
