[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowledger"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer==0.16.0",
    "fastapi==0.115.6",
    "uvicorn==0.32.1",
    "mcp==1.9.0",
    "pyyaml==6.0.2",
    "pydantic==2.10.3",
    "chromadb==0.6.3",
    "ulid-py==1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
]

[project.scripts]
knowledger = "knowledger.main:main"

[tool.hatch.build.targets.wheel]
packages = ["knowledger"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
