[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowledger"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer==0.26.7",
    "fastapi==0.138.0",
    "uvicorn==0.49.0",
    "mcp==1.28.0",
    "pyyaml==6.0.3",
    "pydantic>=2.11.0",
    "chromadb==1.5.9",
    "ulid-py==1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
]

[project.scripts]
knowledger = "knowledger.main:main"

[tool.hatch.build.targets.wheel]
packages = ["knowledger"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
